--- a/css/app.css
+++ b/css/app.css
@@ -1,4 +1,9 @@
 body {
+	font-family: cursive;
+	margin: 0px;
+	padding: 	0px;
+}
+h2 {
 	font-family: 'Gloria Hallelujah', cursive;
 	margin: 0px;
 	padding: 	0px;
