--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,23 @@
+* {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+body {
+	margin: 0px;
+	padding: 0px;
+
+}
+
+html,body {
+    height:100%;
+}
+
+
+
 body {
 	font-family: cursive;
-	margin: 0px;
-	padding: 	0px;
 }
 h2 {
 	font-family: 'Gloria Hallelujah', cursive;
@@ -22,30 +38,6 @@ h2 {
 	max-height: none !important;
 }
 
-.listaItems {
-	position:	relative;
-	border:     0px;
-	width:		100%;
-	margin: 	0px;
-	padding: 	0px;
-	display:	block;
-	overflow:	auto;
-}
-.caja {
-	position:	absolute;
-	border:		solid 0px;
-	box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.1);
-	overflow:	hidden;
-	padding: 	0px;
-	margin: 	0px;
-	border-radius:	8px;
-}
-.contenido {
-	display:		block;
-	border:			solid 0px;
-	padding:	10px;
-	margin: 	0px;
-}
 .botonera {
 	position:	absolute;
 	border:     0px;
@@ -76,4 +68,71 @@ h2 {
 	border:				solid 3px;
 }
 
+
+.listaItems {
+    height:  calc(100% - 80px);
+	width:		100%;
+	margin: 	0px;
+	padding: 	0px;
+    overflow-y: auto;
+}
+.item {
+	margin-bottom: 	10px;
+	margin-right: 	5px;
+}
+.titulo {
+	white-space: nowrap;
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+.container {
+    width:100%;
+    height: 100%;
+}
+
+.caja {
+	border-radius: 5px;
+	border:		solid 0px;
+	box-shadow: 0px 0px 0px 1px rgba(0, 0, 0, 0.1);
+
+    padding: 10px;
+    margin: 10px;
+}
+.encurso, .edicion {
+    width: calc(50% - 20px);
+    min-width: calc(50% - 20px);
+    height:  300px;
+    min-height: 300px;
+    overflow-y: auto;
+}
+.pendientes, .finalizadas {
+    width: calc(50% - 20px);
+    min-width: calc(50% - 20px);
+    height:  calc(100% - 340px);
+    overflow-y: auto;
+}
+
+.encurso, .finalizadas {
+    float:left;
+}
+.edicion, .pendientes {
+    float:right;
+}
+
+@media screen and (max-width: 926px) {
+    .pendientes, .edicion, .encurso, .finalizadas {
+        width:auto;
+        float:none;
+		height:auto;
+		min-height:0px;
+    }
+	.listaItems {
+		max-height: 350px;
+	}
+    .container {
+		height: none;
+    }
+    
+}    
 
